tests/baselines/reference/indexIntoEnum.errors.txt
indexIntoEnum.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== indexIntoEnum.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        enum E { }
    
        var x = E[0];
    }